<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepCounterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_backround"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stepCounter_TXT_showsteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Shows_your_steps"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/stepCounter_TXT_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:text="@string/Counter"
            android:textSize="30sp" />


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_stpercounter" />

        <Button
            android:id="@+id/stepCounter_BTN_CounterReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/counter_reset"
            android:textColor="@color/textcolor"
            app:cornerRadius="20dp" />


        <Button
            android:id="@+id/stepCouner_BTN_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/back"
            android:textColor="@color/textcolor"
            app:cornerRadius="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>