<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/task_LLAT_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ic_backround"
        android:layout_margin="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Task"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/task_EDT_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your task here"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:imeOptions="actionDone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/task_EDT_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Choose date"
            android:layout_marginBottom="10dp"
            android:focusable="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/task_EDT_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Choose time"
            android:layout_marginBottom="10dp"
            android:focusable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Location"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/task_EDT_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Choose Location"
            android:layout_marginBottom="10dp"
            android:focusable="false"/>

    </LinearLayout>



    <Button
        android:id="@+id/task_BTN_check"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/Save"
        android:backgroundTint="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"/>



</RelativeLayout>